chore: Improve code readability and fix issues with question selection

--- a/src/assets/main.less
+++ b/src/assets/main.less
@@ -17,7 +17,6 @@ body {
 }
 
 body {
-  overflow: hidden;
   color: var(--text-color);
   background: var(--bg-color);
   transition:
@@ -49,7 +48,7 @@ body {
 #app {
   display: flex;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 button {
